--- a/src/components/social-profile/Profile.module.css
+++ b/src/components/social-profile/Profile.module.css
@@ -3,7 +3,7 @@
   width: 350px;
   border: 1px solid #dadbdd;
   border-radius: 10px;
-  margin: 0 auto;
+  margin: 10px auto 40px;
   box-shadow: 0px 0px 2px 2px rgba(34, 60, 80, 0.1);
   overflow: hidden;
 }
