--- a/src/components/friend-list/FriendListItem.module.css
+++ b/src/components/friend-list/FriendListItem.module.css
@@ -19,10 +19,12 @@
 }
 
 .statusOnline {
+  composes: status;
   background-color: green;
 }
 
 .statusOffline {
+  composes: status;
   background-color: red;
 }
 
